--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
   
 website:
-  title: "MY WEB SITE"
+  title: "LUÍS ADRIANO ANHOLETO"
   navbar:
     left:
       - href: index.qmd
@@ -11,12 +11,12 @@ website:
       - projects.qmd
     tools:
       - icon: twitter
-        href: https://twitter.com/
+        href: https://twitter.com/lanholeto
       - icon: github
-        href: https://github.com/YOURUSERNAME/YOURREPO
+        href: https://github.com/lanholeto/portfolio
   page-footer:
     right: "Built with [Quarto](https://quarto.org/)"
-    left: "&copy; Copyright 2023, YOUR NAME"
+    left: "&copy; Copyright 2025, Luís Adriano Anholeto"
 
 format:
   html:
