--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,29 +1,35 @@
 project:
-  type: website
-  output-dir: docs
+  type: website #type of project
+  output-dir: docs #folder to save files
   
 website:
-  title: "Luis Anholeto"
+  #control navegation bar
   navbar:
     left:
-      - href: index.qmd
-        text: |
-          Home
-      - href: about.qmd
-        text: |
-          About
-      - href: projects.qmd
-        text: |
-          Projects
-      - href: short_cv.qmd
-        text: |
-          CV
-    right: 
+    - href: index.qmd
+      text: <i class="bi bi-house-door-fill"></i>
+      
+    - href: about/index.qmd
+      text: "About"
+      
+    - href: research/index.qmd
+      text: "Research"
+          
+    - href: publications/index.qmd
+      text: "Publications"
+          
+    - href: cv/index.qmd
+      text: "CV"
+
+    - href: contact/index.qmd
+      text: "Contact"
+      
+    tools:
     - icon: envelope
       href: mailto:luis.anholeto@cadiau.ca
     - icon: github
       href: https://github.com/lanholeto
-    - icon: twitter
+    - icon: twitter-x
       href: https://twitter.com/lanholeto
     - icon: linkedin
       href: https://www.linkedin.com/in/lanholeto
@@ -31,12 +37,17 @@ website:
       href: https://scholar.google.com/citations?user=dlkP2zUAAAAJ&hl=en
     - icon: person-circle
       href: https://orcid.org/0000-0001-8712-2630
-  favicon: "images/anholeto-profile.jpeg"
+      
+  
+  #control footpage 
   page-footer:
-    left: |
-      © 2025 Luis Anholeto.
+    border: false
+    background: "#000000"
+    left: "© last modified Feb 16, 2025 - Luís Adriano Anholeto"
+
+#control format for all pages 
 format:
   html:
+    theme: [lux, lux.scss]
     toc: true
-    css: styles.css
-    smooth-scroll: true
+    toc-floating: true
